<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>net.hep.ami</groupId>
	<artifactId>AMICore</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<name>AMICore</name>
	<url>http://www.cern.ch/ami/</url>

	<packaging>pom</packaging>

	<properties>
		<mail.version>1.5.2</mail.version>

		<log4j.version>2.4.1</log4j.version>
		<jackson.version>2.6.3</jackson.version>
		<saxon.version>9.6.0-7</saxon.version>
		<bouncycastle.version>1.51</bouncycastle.version>
		<antlr.version>4.5</antlr.version>
		<jsch.version>0.1.53</jsch.version>

		<oracle.version>12.2.0.1</oracle.version>
		<mysql.version>5.1.34</mysql.version>
		<h2.version>1.4.191</h2.version>
		<sqlite.version>3.8.7</sqlite.version>
		<neo4j.version>3.0.1</neo4j.version>

		<tomcat.version>8.0.18</tomcat.version>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<!--***************************************************************-->

		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>javax.mail</artifactId>
			<version>${mail.version}</version>

			<exclusions>
				<exclusion>
					<groupId>javax.activation</groupId>
					<artifactId>activation</artifactId>
				</exclusion>
			</exclusions>

		</dependency>

		<!--***************************************************************-->

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j.version}</version>
		</dependency>

		<!--***************************************************************-->

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.version}</version>
		</dependency>

		<!--***************************************************************-->

		<dependency>
			<groupId>net.sf.saxon</groupId>
			<artifactId>Saxon-HE</artifactId>
			<version>${saxon.version}</version>
		</dependency>

		<!--***************************************************************-->

		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcpkix-jdk15on</artifactId>
			<version>${bouncycastle.version}</version>
		</dependency>

		<!--***************************************************************-->

		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4-runtime</artifactId>
			<version>${antlr.version}</version>

			<exclusions>
				<exclusion>
					<groupId>org.abego.treelayout</groupId>
					<artifactId>org.abego.treelayout.core</artifactId>
				</exclusion>
			</exclusions>

		</dependency>

		<!--***************************************************************-->

		<dependency>
			<groupId>com.jcraft</groupId>
			<artifactId>jsch</artifactId>
			<version>${jsch.version}</version>
		</dependency>

		<!--***************************************************************-->

		<dependency>
			<groupId>com.oracle.jdbc</groupId>
			<artifactId>ojdbc8</artifactId>
			<version>${oracle.version}</version>
		</dependency>

		<!--***************************************************************-->

		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>${mysql.version}</version>
		</dependency>

		<!--***************************************************************-->

		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>${h2.version}</version>
		</dependency>

		<!--***************************************************************-->

		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>${sqlite.version}</version>
		</dependency>

		<!--***************************************************************-->

		<dependency>
			<groupId>org.neo4j</groupId>
			<artifactId>neo4j-jdbc-driver</artifactId>
			<version>${neo4j.version}</version>
		</dependency>

		<!--***************************************************************-->

		<dependency>
			<groupId>org.apache.tomcat</groupId>
			<artifactId>tomcat-jdbc</artifactId>
			<version>${tomcat.version}</version>
		</dependency>

		<!--***************************************************************-->
	</dependencies>

	<build>

		<pluginManagement>
			<plugins>

				<!--*******************************************************-->

				<plugin>
					<groupId>org.sonarsource.scanner.maven</groupId>
					<artifactId>sonar-maven-plugin</artifactId>
					<version>3.1.1</version>
				</plugin>

				<!--*******************************************************-->

			</plugins>
		</pluginManagement>

		<plugins>
			<!--***********************************************************-->

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.2</version>

				<configuration>
					<autoversionsubmodules>true</autoversionsubmodules>
				</configuration>

			</plugin>

			<!--***********************************************************-->

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>

				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>

			</plugin>

			<!--***********************************************************-->
		</plugins>

	</build>

	<modules>
		<module>AMIJavaCore</module>
		<module>AMIWebCore</module>
	</modules>

</project>
